--- a/index.html
+++ b/index.html
@@ -16,43 +16,43 @@
 
             <section class="feature">
                 <h3>Click a dinosaur species to cross it off the list.</h3>
-                <ol>
-                    <li>Alocodon</li>
-                    <li>Chuandongocoelurus</li>
-                    <li>Patagosaurus</li>
-                    <li>Crichtonsaurus</li>
-                    <li>Coelophysis</li>
-                    <li>Uintasaurus</li>
-                    <li>Archaeornis</li>
-                    <li>Torvosaurus</li>
-                    <li>Chassternbergia</li>
-                    <li>Compsognathus</li>
-                    <li>Microvenator</li>
-                    <li>Erketu</li>
-                    <li>Lapampasaurus</li>
-                    <li>Xuwulong</li>
-                    <li>Razanandrongobe</li>.
+                <ol class = "list-1">
+                    <li class = "dino-1">Alocodon</li>
+                    <li class = "dino-2">Chuandongocoelurus</li>
+                    <li class = "dino-3">Patagosaurus</li>
+                    <li class = "dino-4">Crichtonsaurus</li>
+                    <li class = "dino-5">Coelophysis</li>
+                    <li class = "dino-6">Uintasaurus</li>
+                    <li class = "dino-7">Archaeornis</li>
+                    <li class = "dino-8">Torvosaurus</li>
+                    <li class = "dino-9">Chassternbergia</li>
+                    <li class = "dino-10">Compsognathus</li>
+                    <li class = "dino-11">Microvenator</li>
+                    <li class = "dino-12">Erketu</li>
+                    <li class = "dino-13">Lapampasaurus</li>
+                    <li class = "dino-14">Xuwulong</li>
+                    <li class = "dino-15">Razanandrongobe</li>.
                 </ol>
             </section>
 
             <section class="feature">
                 <h3>Click a species to make it fade away.</h3>
-                <ul>
-                    <li>Archaeopteryx</li>
-                    <li>Banji</li>
-                    <li>Agrosaurus</li>
-                    <li>Brachypodosaurus</li>
-                    <li>Baurutitan</li>
-                    <li>Quaesitosaurus</li>
-                    <li>Leptorhynchos</li>
-                    <li>Hierosaurus</li>
-                    <li>Alamosaurus</li>
-                    <li>Marasuchus</li>
-                    <li>Corythosaurus</li>
-                    <li>Protoceratops</li>
-                    <li>Stephanosaurus</li>
-                    <li>Galvesaurus</li>
-                    <li>Palaeosauriscus</li>
+                <ul class = "list-2">
+                    <li class = "dino-1">Archaeopteryx</li>
+                    <li class = "dino-2">Banji</li>
+                    <li class = "dino-3">Agrosaurus</li>
+                    <li class = "dino-4">Brachypodosaurus</li>
+                    <li class = "dino-5">Baurutitan</li>
+                    <li class = "dino-6">Quaesitosaurus</li>
+                    <li class = "dino-7">Leptorhynchos</li>
+                    <li class = "dino-8">Hierosaurus</li>
+                    <li class = "dino-9">Alamosaurus</li>
+                    <li class = "dino-10">Marasuchus</li>
+                    <li class = "dino-11">Corythosaurus</li>
+                    <li class = "dino-12">Protoceratops</li>
+                    <li class = "dino-13">Stephanosaurus</li>
+                    <li class = "dino-14">Galvesaurus</li>
+                    <li class = "dino-15"> Palaeosauriscus</li>
                 </ul>
             </section>
 
